[package]
name = "RustTODOproj"
version = "0.1.0"
authors = ["Hassan-iqbal2812 <Hassan_iqbal2812@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
indexmap = "1.5.1"